ajout de mon cv

--- a/cv-nacer-atoui.html
+++ b/cv-nacer-atoui.html
@@ -10,58 +10,56 @@
 
 <body>
 
-   
-        <header class="toprectangle">
 
-            <h1 class="name">Nacer Atoui</h1>
-            <div class="photo">
-                <img src="photo-nacer.png">
-            </div>
-            <h3 class="dev">Stagiaire Développeur Web et Web Mobile</h3>
+    <header class="toprectangle"> <!--haut de page contenant photo nom et poste-->
 
-        </header>
-    
+        <h1 class="name">Nacer Atoui</h1>
+        <div class="photo">
+            <img alt="" src="photo-nacer.png">
+        </div>
+        <h3 class="dev">Stagiaire Développeur Web et Web Mobile</h3>
 
-
-    <div class="topcontainer">
-        <section>
-            <div class="info">
-                <section class="contact">
-                    <div class="contact-flex">
-                        <h4 class="subtitle">CONTACT</h4>
-                    </div>
-                    <div class="contact-flex">
-                        <p>06.61.34.11.08</p>
-                    </div>
-                    <div class="contact-flex">
-                        <p>nacer.atoui@laplateforme.io</p>
-                    </div>
-                    <div class="contact-flex">
-                        <p>7A Rue Colin, 69100 Villeurbanne</p>
-                    </div>
-
-                </section>
-            </div>
+    </header>
 
 
-            <div class="moi">
-                <section>
-                    <div class="profil-flex">
-                        <h4 class="subtitle">MON PROFILE</h4>
-                    </div>
-                    <div class="profil-flex">
-                        <p>Anciennement menuisier d'agencement et suite à une inaptitude professionnelle
-                            je me dirige actuellement vers une reconversion en tant que développeur web car
-                            je suis très attiré par le monde du web et de la technologie</p>
-                    </div>
-                </section>
-        </section>
 
-    </div>
+    <div class="topcontainer"> <!--Container comportant les infos perso et la description-->
+
+        <div class="info"> <!--Infos personnelles-->
+            <section class="contact">
+                <div class="contact-flex">
+                    <h4 class="subtitle">CONTACT</h4>
+                </div>
+                <div class="contact-flex">
+                    <p>06.61.34.11.08</p>
+                </div>
+                <div class="contact-flex">
+                    <p>nacer.atoui@laplateforme.io</p>
+                </div>
+                <div class="contact-flex">
+                    <p>7A Rue Colin, 69100 Villeurbanne</p>
+                </div>
+
+            </section>
+        </div>
+
+
+        <div class="moi"> <!--Description personnelle-->
+            <section>
+                <div class="profil-flex">
+                    <h4 class="subtitle">MON PROFILE</h4>
+                </div>
+                <div class="profil-flex">
+                    <p>Anciennement menuisier d'agencement et suite à une inaptitude professionnelle
+                        je me dirige actuellement vers une reconversion en tant que développeur web car
+                        je suis très attiré par le monde du web et de la technologie</p>
+                </div>
+            </section>
+        </div>
 
     </div>
 
-    <div class="bottomcontain">
+    <div class="bottomcontain"> <!--container bas contient le parcour scolaire et pro-->
 
         <div class="etude">
             <section>
@@ -128,7 +126,7 @@
     </div>
 
 
-    <div class="compet">
+    <div class="compet"> <!--Dernier container pour les competences-->
         <section class="skills">
             <div class="comp-title">
                 <h4>COMPETENCES</h4>
